namespace DDDSample1.Domain.OperationRequests;

public enum Priority
{
    Elective,
    Urgent,
    Emergency
}