namespace DDDSample1.Domain.Patients;

public enum Gender {
    Male,
    Female,
    Other
}